# langmentor

./: .env.development  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Justfile  README.md  docker-compose.ha.yml  docker-compose.infra.yml  docker-compose.monitoring.yml  docker-compose.yml  just.1  package-lock.json  package.json
.sisyphus/run-continuation/: ses_1e606fff9ffef2VCuxrV26M6qV.json
app/agent/: page.tsx
backend/: README.md  main.py  pyproject.toml
backend/agent/: __init__.py  llm.py  tools.py
backend/api-gateway/: Dockerfile
backend/api-gateway/app/: main.py
backend/api_gateway/app/: main.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/celery-worker/: Dockerfile  config.py  tasks.py
backend/celery_worker/: tasks.py
backend/llm-service/: Dockerfile
backend/llm-service/app/: main.py
backend/llm_service/: Dockerfile
backend/llm_service/app/: main.py
backend/rag-service/: Dockerfile
backend/rag-service/app/: main.py
backend/rag_service/app/: main.py
backend/scripts/: init.sql
backend/shared/models/: base.py
backend/shared/utils/: config.py
completions/: just.bash  just.elvish
components/agent/: chat.tsx  exercise.tsx  grammar.tsx  translator.tsx  vocabulary.tsx
components/ui/: markdown-renderer.tsx  taskbar.tsx  window.tsx
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  (+2 more)
lib/: stream.ts
monitoring/: alert-rules.yml  prometheus.yml
nginx/: Dockerfile  nginx.conf
scripts/: deploy-ha.sh  set_env.sh  start.sh  stop.sh
(+3 files in other folders)
